force-app/main/default/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One doctor</fullName>
                <default>true</default>
                <label>One doctor</label>
            </value>
            <value>
                <fullName>Entire practice</fullName>
            </value>
            <value>
                <fullName>Practice including future doctors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>