force-app/main/default/objects/Contract/fields/CB2_0_Stiped__c.field-meta.xml
<CustomField>
    <fullName>CB2_0_Stiped__c</fullName>
    <label>CB2.0 Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300</fullName>
                <default>true</default>
                <label>300</label>
            </value>
            <value>
                <fullName>350</fullName>
            </value>
            <value>
                <fullName>375</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>