force-app/main/default/objects/Contract/fields/Completed_W_9__c.field-meta.xml
<CustomField>
    <fullName>Completed_W_9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed W-9</label>
    <type>Checkbox</type>
</CustomField>