force-app/main/default/objects/Contract/fields/CT_Stipend__c.field-meta.xml
<CustomField>
    <fullName>CT_Stipend__c</fullName>
    <label>CT Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50</fullName>
                <default>true</default>
                <label>50</label>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>