force-app/main/default/objects/Contract/fields/Number_of_File_Attached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_File_Attached__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Files Attached</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>