force-app/main/default/objects/Contract/fields/PT_2_0_Stipend__c.field-meta.xml
<CustomField>
    <fullName>PT_2_0_Stipend__c</fullName>
    <label>PT 2.0 Stipend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>75</fullName>
                <default>true</default>
                <label>75</label>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>