force-app/main/default/objects/Contract/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Used instead of standard Start Date field so a default value can be set.</description>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>