force-app/main/default/objects/Contract/validationRules/Account_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Missing</fullName>
    <active>true</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;,
ISBLANK ( AccountId ))</errorConditionFormula>
    <errorMessage>Please add the Account before activating this contract.</errorMessage>
</ValidationRule>