force-app/main/default/objects/Contract/validationRules/Contact_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_missing</fullName>
    <active>true</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;, 
ISBLANK ( Contact__c ))</errorConditionFormula>
    <errorMessage>Please include the primary Contact before activating this contract.</errorMessage>
</ValidationRule>