force-app/main/default/objects/Contract/validationRules/File_not_attached.validationRule-meta.xml
<ValidationRule>
    <fullName>File_not_attached</fullName>
    <active>true</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;, 
Number_of_File_Attached__c &lt; 1)</errorConditionFormula>
    <errorMessage>Please upload a copy of the agreement or W-9 before activating this contract.</errorMessage>
</ValidationRule>