force-app/main/default/objects/Contract/validationRules/NotReadyforActivation.validationRule-meta.xml
<ValidationRule>
    <fullName>NotReadyforActivation</fullName>
    <active>false</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;,
OR ( 
Number_of_File_Attached__c &lt; 1,
ISBLANK(TEXT(Agreement_Type__c)),
ISBLANK ( AccountId ),
ISBLANK ( Contact__c ),
AND(Completed_W_9__c=false,  
Signed_Agreement__c=false) ))</errorConditionFormula>
    <errorMessage>You are missing one or more of the requirements to activate a contract:
Contact
Specify an Agreement Type
Check W-9 or Signed Agreement or both 
Attache file with signed agreement or W-9 or both</errorMessage>
</ValidationRule>