force-app/main/default/objects/Contract/validationRules/Signed_agreement_or_completed_W9.validationRule-meta.xml
<ValidationRule>
    <fullName>Signed_agreement_or_completed_W9</fullName>
    <active>true</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;,
AND(Completed_W_9__c=false,  
Signed_Agreement__c=false) )</errorConditionFormula>
    <errorMessage>You must select &quot;Signed Agreement&quot; or &quot;Completed W-9&quot; or both.</errorMessage>
</ValidationRule>