force-app/main/default/objects/Contract/validationRules/Type_of_Agreement.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_Agreement</fullName>
    <active>true</active>
    <errorConditionFormula>AND (text(Status)=&quot;Activated&quot;,
ISBLANK(TEXT(Agreement_Type__c)))</errorConditionFormula>
    <errorMessage>Please indicate the type of agreement before activating this contract.</errorMessage>
</ValidationRule>